--- a/concepts/core-architecture/test-lifecycle.mdx
+++ b/concepts/core-architecture/test-lifecycle.mdx
@@ -1,272 +1,246 @@
 ---
-title: "Test Discovery and Execution Lifecycle"
-description: "Follow the journey of a test from definition to execution. Learn about test registration, automatic test discovery, structuring of test suites and test cases, and the lifecycle events (SetUp, TearDown) that surround each test run."
+title: "Test Lifecycle and Execution Model"
+description: "Discover the end-to-end lifecycle of a test in GoogleTest, from discovery and initialization, through execution and assertion, to reporting results. Explore how main entry points, fixtures, and setups work together, and how GoogleMock integrates into the lifecycle to enable controlled behavior."
 ---
 
-# Test Discovery and Execution Lifecycle
+# Test Lifecycle and Execution Model
 
-GoogleTest offers a streamlined yet powerful lifecycle for defining, discovering, and executing tests in C++. This page guides you through the journey of a test—from its initial registration, automatic discovery by the framework, organization within test suites and fixtures, to the lifecycle events that prepare the environment before execution and cleanup afterward.
-
----
-
-## 1. Test Registration and Automatic Discovery
-
-At the core of GoogleTest's seamless user experience is automatic test registration. Whenever you define a test using macros like `TEST`, `TEST_F`, or other test-defining macros, GoogleTest immediately registers it with the global test registry. This enables the framework to discover all tests without the need for manual enumeration.
-
-### Key Concepts
-
-- **Static Registration:** Each `TEST` or `TEST_F` macro invocation defines a test function and registers metadata about the test fixture, test name, location, and the object factory responsible for creating the test instance.
-
-- **Unique Identification:** Tests are uniquely identified by their *test suite* and *test name*. The combination serves as the test's full name.
-
-- **Role of Test Fixture Classes:** For `TEST_F`, the test suite name matches the fixture class name. GoogleTest enforces a rule that all tests in the same test suite must use the same fixture class.
-
-### User Perspective
-
-You simply write:
-
-```cpp
-TEST(MyTestSuite, DoesSomething) {
-  EXPECT_TRUE(DoSomething());
-}
-
-class MyFixture : public testing::Test {
- protected:
-  void SetUp() override { /* prepare fixture */ }
-};
-
-TEST_F(MyFixture, WorksWithFixture) {
-  EXPECT_EQ(42, Answer());
-}
-```
-
-Behind the scenes, these are automatically known and ready to run when `RUN_ALL_TESTS()` is called.
+Discover the end-to-end lifecycle of a test in GoogleTest, from discovery and initialization, through execution and assertion, to reporting results. Explore how main entry points, fixtures, and setups work together, and how GoogleMock integrates into the lifecycle to enable controlled behavior.
 
 ---
 
-## 2. Structuring Tests into Test Suites and Fixtures
+## Introduction
 
-GoogleTest groups related tests into **test suites**, which serve as logical containers. A test suite name can be arbitrary but typically maps to the feature or class being tested. Test suites can optionally share a **test fixture**: a class that lets you define common setup/teardown and shared objects.
+Understanding how GoogleTest processes tests internally is essential for writing effective, maintainable, and debuggable test suites. GoogleTest follows a structured test lifecycle that ensures tests are isolated, repeatable, and provide detailed failure diagnostics.
+
+This page walks you through the full lifecycle of a test run, including discovery, setup, execution, failure handling, and teardown. You'll also see how GoogleMock integrates to control mock object behavior within this lifecycle.
+
+---
+
+## 1. Test Discovery and Registration
+
+### Defining Tests
+
+- **Macro-Based Registration:** Tests are typically declared using macros such as `TEST()`, `TEST_F()`, and `TEST_P()`. Each macro expands into a class and registers the test with GoogleTest's internal registry.This registration associates the test's *fixture class* (if any), name, source code location, and factory function to create test instances.
+
+- **Dynamic Registration:** For more complex scenarios, `RegisterTest()` allows programmatic registration of tests at runtime, facilitating dynamic test generation.
+
+### Types of Tests
+
+- **Simple Tests (`TEST`)**: Standalone tests without fixtures.
+- **Fixture Tests (`TEST_F`)**: Tests that share a common test fixture class instance.
+- **Value-Parameterized Tests (`TEST_P`) and Typed Tests (`TYPED_TEST`)**: Tests instantiated multiple times with various parameters or types.
 
 ### Test Suites
 
-- Correspond with test collection named in the `TEST` or `TEST_F` macros.
-- GoogleTest maintains metadata for each test suite including the list of constituent tests.
-- Each test suite tracks aggregated results like the number of passed, failed, or skipped tests.
-
-### Test Fixtures
-
-- Fixture classes derive from `testing::Test` and may override `SetUp()` and `TearDown()` for per-test initialization and cleanup.
-- Fixtures may also define **per-test-suite shared setup and teardown** methods:
-  - `static void SetUpTestSuite()` that runs once before any test in the suite.
-  - `static void TearDownTestSuite()` that runs once after all tests in the suite.
-
-This design allows:
-
-- Avoiding expensive setup on each test.
-- Sharing read-only or resettable resources across tests.
-
-### Example
-
-```cpp
-class DatabaseTest : public testing::Test {
- protected:
-  static void SetUpTestSuite() {
-    // Initialize shared DB connection
-  }
-
-  static void TearDownTestSuite() {
-    // Close DB connection
-  }
-
-  void SetUp() override {
-    // Start transaction
-  }
-
-  void TearDown() override {
-    // Rollback transaction
-  }
-};
-
-TEST_F(DatabaseTest, InsertRecord) {
-  EXPECT_TRUE(db.Insert(...));
-}
-
-TEST_F(DatabaseTest, DeleteRecord) {
-  EXPECT_TRUE(db.Delete(...));
-}
-```
-
-This setup ensures a consistent environment while minimizing costly operations.
+- Tests are grouped into *test suites* (formerly called *test cases*), which are collections of logically related tests sharing names and fixtures.
 
 ---
 
-## 3. Test Lifecycle: From SetUp to TearDown
+## 2. Test Initialization
 
-Every individual test goes through a well-defined lifecycle that guarantees isolation and proper resource management.
+### GoogleTest Initialization
 
-### Lifecycle Methods
+- The entry point for test programs is typically `main()`, calling `testing::InitGoogleTest(&argc, argv)` to parse command-line flags and initialize internal data structures.
 
-1. **Fixture Object Creation**: For each test, a fresh test fixture object is created.
-2. **SetUpTestSuite** (static): Called once per test suite before any test runs.
-3. **SetUp**: Called before each test method to prepare the test fixture.
-4. **Test Body Execution**: The actual test code runs here.
-5. **TearDown**: Immediately after the test body, for cleanup.
-6. **Fixture Object Destruction**: The test fixture instance is destroyed.
-7. **TearDownTestSuite** (static): Called once after all tests in the suite complete.
+- Flags control behaviors like test filtering, running disabled tests, output formats, repeat counts, sharding, and more.
 
-### Important Notes
+### Global Test Environments
 
-- The fixture object is **NOT** reused across multiple tests to ensure test independence.
-- If an assertion fails fatally (`ASSERT_*` macros), the current test function aborts but following tests in the suite continue.
-- Setup and teardown failures (e.g., in `SetUpTestSuite` or `SetUp`) can cause tests to be skipped.
+- Users can define global environments by subclassing `testing::Environment` with `SetUp()` and `TearDown()` methods for global setup and teardown.
 
-### Example Scenario
+- Environments are registered with `AddGlobalTestEnvironment()` and are invoked in the order they are registered before tests run, and torn down in reverse order after tests finish.
 
-For `TEST_F(MyFixture, SomeTest)`, the sequence is:
-
-```none
-Create MyFixture instance
-Call SetUpTestSuite() if first test
-Call SetUp()
-Run SomeTest's test body
-Call TearDown()
-Destroy MyFixture instance
-Call TearDownTestSuite() if last test
-```
+- Global environments run only if at least one test will be executed. They can report failures, and their teardown runs even if tests fail.
 
 ---
 
-## 4. Execution Flow and Event Notifications
+## 3. Test Suite Setup and Teardown
 
-GoogleTest emits event notifications throughout test execution via an extensible event listener API to facilitate custom logging, reporting, or integration.
+### Test Suite Lifecycle
 
-### Event Listener Callbacks
+- Before any test in a test suite runs, GoogleTest calls the suite-level setup method `SetUpTestSuite()` if defined.
+- After the last test in the suite finishes, GoogleTest calls `TearDownTestSuite()`.
 
-- **OnTestProgramStart**: Before any tests run.
-- **OnTestIterationStart**: Before each iteration if test repetition is enabled.
-- **OnEnvironmentsSetUpStart / End**: Before and after global environments setup.
-- **OnTestSuiteStart / End**: Surrounds an entire test suite execution.
-- **OnTestStart / End**: Wraps execution of each individual test.
-- **OnTestPartResult**: Called after each assertion or explicit success/failure.
-- **OnEnvironmentsTearDownStart / End**: Before and after global environments teardown per iteration.
-- **OnTestIterationEnd**: After each iteration finishes.
-- **OnTestProgramEnd**: After all tests and environments complete.
+### Shared Resources
 
-This event model enables fine-grained control over test monitoring and modifications.
+- The test suite lifecycle allows expensive resources to be set up once and shared across all tests within that suite, improving test performance.
+
+- Because tests are run on fresh fixture instances, the shared resources need to be static members of the fixture class.
 
 ---
 
-## 5. Test Filtering and Execution Control
+## 4. Test Execution Flow
 
-GoogleTest supports running a selective subset of tests using filtering based on test names, test suite names, or patterns.
+### Per-Test Lifecycle
 
-### Filter Syntax
+Each individual test follows this precise flow:
 
-- Use the flag `--gtest_filter=PositivePatterns[-NegativePatterns]`.
-- Patterns are colon-separated glob-wildcards, e.g., `FooTest.*:BarTest.Baz*`.
-- Negative patterns exclude matching tests.
-- Filtering applies consistently across all registered tests.
+1. **Test Fixture Construction:** An instance of the test fixture class is created (if using a fixture).
+2. **`SetUp()` Method Execution:** Initializes test-specific state before running the test body.
+3. **Test Body (`TestBody()`) Execution:** The core test code, where assertions (`EXPECT_*` or `ASSERT_*`) are made.
+4. **`TearDown()` Method Execution:** Cleans up any test-specific resources.
+5. **Fixture Destruction:** The test fixture instance is destroyed to prepare for the next test.
 
-### Examples
 
-```shell
-./my_tests --gtest_filter=NetworkTest.*
-./my_tests --gtest_filter=*Error* -LoggingTest.*
-./my_tests --gtest_filter=*
-```
+### Assertion Behavior
 
-### Fail Fast
+- **Fatal Assertions (`ASSERT_*`, `FAIL()`)** abort the current function immediately but do not abort the whole test program, allowing GoogleTest to continue running other tests.
 
-- Set `--gtest_fail_fast` to stop test execution upon the first failure.
+- **Nonfatal Assertions (`EXPECT_*`, `ADD_FAILURE()`)** record the failure but allow the current function and test to continue.
 
-### Test Sharding
+- Users can check for failures in the current test via `HasFatalFailure()`, `HasNonfatalFailure()`, or `HasFailure()`.
 
-- Environment variables `GTEST_TOTAL_SHARDS` and `GTEST_SHARD_INDEX` enable distributed execution across multiple machines or processes.
+### Skipping Tests
 
----
+- Calling `GTEST_SKIP()` in tests or fixtures stops test execution and marks the test or test suite as skipped.
 
-## 6. Summary and Practical Tips
+### Using `SCOPED_TRACE`
 
-- Always use well-named test suites and fixtures to organize your tests and simplify management.
-- Avoid sharing state between tests except via proper fixture static setup/teardown.
-- Use `SetUpTestSuite` and `TearDownTestSuite` to optimize expensive shared resource management.
-- `RUN_ALL_TESTS()` will automatically discover and execute all registered tests.
-- Use filtering and sharding features to speed up large test runs or focus debugging.
+- `SCOPED_TRACE` adds contextual trace messages to failure outputs, helping identify from which scope or iteration failures arise, especially useful in helper functions or loops.
 
 ---
 
-## 7. Diagram: Test Discovery and Execution Lifecycle
+## 5. Handling Test Failures
+
+### Failure Types
+
+- **Fatal Failure:** Stops the current function; indicated by `ASSERT_*` macros or `FAIL()`.
+- **Nonfatal Failure:** Marks failure but continues execution; produced by `EXPECT_*` macros or `ADD_FAILURE()`.
+
+### Failure Reporting
+
+- Failures cause GoogleTest to record source location, failure messages, and stack traces.
+
+- Multiple failures within the same test are all reported, offering comprehensive diagnostic information.
+
+- Failures in helper functions or nested calls propagate only if checked explicitly (e.g., with `HasFatalFailure()`).
+
+---
+
+## 6. Test Reporting and Result Aggregation
+
+### Test Info and Results
+
+- GoogleTest maintains `TestInfo` and `TestResult` objects that store metadata and results for individual tests.
+
+- `TestSuite` aggregates test results and durations.
+
+- `UnitTest` singleton provides overall program-level aggregates and statistics.
+
+### Output and Event Listeners
+
+- GoogleTest provides default output listeners for console and XML/JSON outputs.
+
+- Users can add custom event listeners by subclassing `TestEventListener` or `EmptyTestEventListener` to hook into the test lifecycle events such as `OnTestStart()`, `OnTestEnd()`, `OnTestPartResult()`, etc.
+
+- Event listeners receive notifications of test program start/end, iteration start/end, environment setup/teardown, test suite start/end, and individual test start/end.
+
+### Repeat and Shuffle
+
+- The framework supports repeating tests multiple times (`--gtest_repeat`) and shuffling test order (`--gtest_shuffle`) to detect flaky tests and order dependencies.
+
+### Test Filtering and Sharding
+
+- Users can run subsets of tests using filters (`--gtest_filter`) and distribute tests across machines using sharding environment variables.
+
+---
+
+## 7. Special Test Types and Integration
+
+### Parameterized and Typed Tests
+
+- Parameterized tests (`TEST_P`) run the same test body with different parameter values.
+
+- Typed tests (`TYPED_TEST`) run the same code over a list of types.
+
+- Both types leverage the cycle of registration, instantiation, and execution outlined earlier.
+
+### Death Tests
+
+- Death tests verify that code under test appropriately terminates or crashes when expected.
+
+- These tests run in separate processes and observe the termination status and output.
+
+- They may require special care in multithreaded environments.
+
+### Mocking with GoogleMock
+
+- GoogleMock integrates with GoogleTest's lifecycle by creating mock objects during test setup and allowing users to set expectations and behaviors that influence test assertions.
+
+- Mock expectations are verified at the end of each test.
+
+- The interaction with the test lifecycle ensures mocks are isolated per test and any unexpected calls or violations cause test failures.
+
+---
+
+## 8. Summary Diagram
 
 ```mermaid
 flowchart TD
-  %% Test Registration and Discovery
-  TEST_DEF[Test Definition (TEST, TEST_F, etc.)] --> REG[Static Registration at Startup]
-  REG --> REGISTRY[(Global Test Registry)]
-
-  %% Test Execution Start
-  main_func["main() calls RUN_ALL_TESTS()"] --> INIT_INIT["Initialize GoogleTest flags"]
-  INIT_INIT --> RUN_ALL["RUN_ALL_TESTS()"
-   "Iterate over registered test suites and tests"]
-
-  %% Per Test Suite Execution
-  RUN_ALL -->|for each TestSuite| SUITE_START["OnTestSuiteStart"]
-  SUITE_START --> SUITE_SETUP["Call SetUpTestSuite()"]
-
-  %% Per Test Execution
-  SUITE_SETUP -->|for each Test| TEST_START["OnTestStart"]
-  TEST_START --> F_CREATE["Create Fixture Object"]
-  F_CREATE --> F_SETUP["Call SetUp()"]
-  F_SETUP --> T_BODY["Run TestBody()"]
-  T_BODY --> F_TEARDOWN["Call TearDown()"]
-  F_TEARDOWN --> F_DESTROY["Destroy Fixture Object"]
-  F_DESTROY --> TEST_END["OnTestEnd"]
-  TEST_END --> SUITE_END["OnTestSuiteEnd"]
-
-  SUITE_END --> SUITE_TEARDOWN["Call TearDownTestSuite()"]
-  SUITE_TEARDOWN --> RUN_ALL
-
-  %% Test Program End
-  RUN_ALL --> PROG_END["OnTestProgramEnd"]
-
-  %% Styles
-  classDef event fill:#f9f,stroke:#333,stroke-width:2px;
-  class SUITE_START,SUITE_END,TEST_START,TEST_END,PROG_END event;
+  A[Start: Run main()] --> B[Call testing::InitGoogleTest(argc, argv)]
+  B --> C[Register global test environments]
+  C --> D{Are there tests to run?}
+  D -->|Yes| E[Call SetUp() on all global Environments]
+  E --> F[For each Test Suite]
+  F --> F1[Call SetUpTestSuite()]
+  F1 --> F2[For each Test in Suite]
+  F2 --> G[Construct Test Fixture]
+  G --> H[Call SetUp()]
+  H --> I[Execute Test Body with Assertions]
+  I --> J[Call TearDown()]
+  J --> K[Destroy Test Fixture]
+  K --> L{Is next Test in Suite?}
+  L -->|Yes| F2
+  L -->|No| M[Call TearDownTestSuite()]
+  M --> N{Is next Test Suite?}
+  N -->|Yes| F
+  N -->|No| O[Call TearDown() on all global Environments]
+  O --> P[Generate Reports and Cleanup]
+  P --> Q[End: Return exit code]
+  D -->|No| R[Skip Environments and Tests]
+  R --> P
 ```
 
 ---
 
-## 8. Troubleshooting Common Issues
+## Troubleshooting Common Issues
 
-### Test Not Running
+- **Fatal failures in helper functions:** Remember that `ASSERT_*` aborts only the current function. Use `HasFatalFailure()` or exception based mechanisms to propagate fatal conditions properly.
 
-- Ensure your source file is compiled and linked correctly.
-- Verify test names and suite names are free of underscores to avoid name clashes.
-- Check filters (`--gtest_filter`) are not excluding your test.
+- **Interleaved logging and assertion output:** Use `SCOPED_TRACE` to add context when failures happen in deeply nested or repetitive code.
 
-### `SetUp` or `SetUpTestSuite` Not Called
+- **Global environment failure:** Fatal failures in global environment setup prevent any tests from running. Use careful setup and error handling in your environments.
 
-- Confirm correct casing (`SetUp`, not `Setup`).
-- Make sure the methods are declared **static** for suite-level setup.
-
-### Mixing Test Macros in the Same Suite
-
-GoogleTest does not allow mixing `TEST` and `TEST_F` in the same test suite. If this occurs, rename one to separate suites.
-
-### Fatal Assertions in Constructors or Destructors
-
-Fatal assertions cannot be used in constructors or destructors; use `SetUp`/`TearDown` instead.
-
-### Fixture Sharing Across Suites
-
-Each test suite must have a unique fixture class. Avoid sharing fixture classes across suites to prevent conflicts.
+- **Uninstantiated parameterized tests:** GoogleTest will report an error if you define parameterized tests without corresponding instantiations. Use `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST` if this is intentional.
 
 ---
 
-## 9. Additional Resources
+## Practical Tips and Best Practices
 
-- [GoogleTest Primer](primer.md) for foundational concepts.
-- [Test Definition & Execution API Reference](reference/testing.md#Test) for detailed API.
-- [Advanced GoogleTest Topics](advanced.md) for sophisticated test lifecycle control.
-- [Organizing Test Suites Guide](guides/core-workflows/organizing-test-suites) for best practices in large codebases.
-- [FAQ: Test Execution Troubleshooting](docs/faq.md#test-execution-failures) for common pitfalls.
+- Structure tests with fixtures (`TEST_F`) to share setup/teardown code.
+- Use `SetUpTestSuite()` and `TearDownTestSuite()` for expensive global test suite state.
+- Keep tests independent by resetting state between tests.
+- Use nonfatal assertions (`EXPECT_*`) when multiple failures per test are helpful.
+- Use `SCOPED_TRACE` liberally in complex scenarios to improve failure messages.
+- Utilize event listeners to customize reporting, logging, or integrate with other tools.
+- For mocks, define expectations explicitly and verify behaviors at test end.
+- Use repeat and shuffle flags during CI runs to detect flaky tests.
+
+---
+
+## References and Further Reading
+
+- [GoogleTest Primer](../primer.md) — Introduction to basic concepts.
+- [Testing Reference](../reference/testing.md) — Detailed API descriptions.
+- [Advanced GoogleTest Topics](../advanced.md) — Deep dive into assertions, advanced fixtures, parameterized tests.
+- [Mocking Fundamentals](../concepts/core-architecture/mocking-fundamentals.md) — How GoogleMock integrates.
+- [Event Listeners API](../api-reference/core-testing-apis/test-definition-execution.md#test-event-listeners) — Customize test execution handling.
+
+---
+
+## Source
+
+This concepts guide is based on the insights and code in `googletest/test/googletest-output-test_.cc`, related internal test files, and the rich API documented in GoogleTest's headers and guides.
+
+---
